--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,12 @@
-# Cloudflare Pages 部署配置
-# 使用命令: npx wrangler pages deploy dist
+# Cloudflare Pages 项目配置
+# 部署命令: npx wrangler pages deploy dist --project-name=zane-lab
 
 name = "zane-lab"
 compatibility_date = "2024-01-01"
 
 # Pages 项目配置
-[pages]
-# 构建输出目录
-project = "./dist"
+pages_build_output_dir = "./dist"
 
 # 环境变量（可选）
-# [pages.vars]
-# ENVIRONMENT = "production"
+# [vars]
+# NODE_ENV = "production"
