--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "remark-slug": "^7.0.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
